# python-markdown-comments

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mkdcomments.py  pyproject.toml  tasks.py  test_comments.py
tests/: test_comments.py
