[tool.poetry]
name = "python-markdown-comments"
version = "1.0.0"
description = "A Python-Markdown extension to ignore html comments opened by three dashes."
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
markdown = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
